# Reckon

./: .gitmodules  CMakeLists.txt  LinAlgebraDef.cpp  LinAlgebraDef.hpp  LpLqRegulizer.cpp  LpLqRegulizer.hpp  README.md  RegularizationBase.hpp  main.cpp
example/: KalmanExample_1.cpp  KalmanExample_2.cpp  RegExample_1.cpp  example_1.cpp  example_2.cpp  l1reg_1.cpp  l1reg_2.cpp  l2reg_1.cpp  lpqreg.cpp  main.cxx
example/test_data_1/: true.mat
lib/gnuplot-cpp/: gnuplot_i.hpp
src/: AlgebraInterface.cpp  AlgebraInterface.hpp  ILinearAlgebra.cpp  ILinearAlgebra.hpp  KalmanFilter.cpp  KalmanFilter.hpp  Regularization.cpp  Regularization.hpp  SciTool.hpp
test/: TestKalman.cpp  TestRegularization.cpp
test_data_1/: measurement.mat  time.mat
test_data_2/: A.mat  L.mat  y.mat
test_data_3/: m_true.mat  noisy_observation.mat  t.mat
